--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
         #image: asanchez75/symfony:nodejs
         build: .
         volumes:
-            - "./html:/var/www/html"
+            - "./html:/vhost/current/web"
         ports:
             - "89:80"
-            - "8009:8009"
+            - "8010:8009"
         restart: always
         privileged: true
         #command: bash -c '/sbin/httpd -k start'
