--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
         ports:
             - "9999:8080"
     elasticsearch:
-        image: docker.elastic.co/elasticsearch/elasticsearch:6.0.1
+        image: quay.io/trackmaven/elasticsearch:1.7
         restart: always
         ports:
             - "9200:9200"
