--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2'
 services:
     web:
         #image: asanchez75/symfony:nodejs
@@ -13,14 +13,30 @@ services:
         #command: bash -c '/sbin/httpd -k start'
         depends_on:
             - blazegraph
+        networks:
+          vpcbr:
+            ipv4_address: 192.168.0.5
     blazegraph:
         image: lyrasis/blazegraph:2.1.4
         restart: always
         ports:
             - "9999:8080"
+        networks:
+          vpcbr:
+            ipv4_address: 192.168.0.6
     elasticsearch:
         image: quay.io/trackmaven/elasticsearch:1.7
         restart: always
         ports:
             - "9200:9200"
             - "9300:9300"
+        networks:
+          vpcbr:
+            ipv4_address: 192.168.0.7
+networks:
+  vpcbr:
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 192.168.0.0/16
+         gateway: 192.168.0.1
